--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('https://cdn.pixabay.com/photo/2017/07/13/08/59/greenhouse-2499758_1280.jpg');
+  background-image: url('https://pixabay.com/get/gdd64e5e0db59c74bb46e5c135553b9bcf7fa2a13538f1afd19aaea1da08fe2ce01d2aae5b1f553798d6207168183edf5_1280.jpg');
   background-size: 100% 100%;
   background-position: center;
   filter: brightness(0.8);
