--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -169,7 +169,8 @@ body {
     /* background-color: red; */
     margin-left: 27px;
     position: absolute;
-    font-size: 29px;
+    font-size: 90px;
+    fill : white;
 
 }
 .plantname_heading{
